[package]
name = "rig-dynclient"
version = "0.1.0"
edition = "2024"

[dependencies]
delegate = "0.13.5"
disjoint_impls = { version = "1.3.7" }
kinded = "0.4.0"
rig-core = { version = "0.31.0", features = ["derive", "rmcp", "dynclient"] }
rmcp = { version = "0.14", features = [
  "client",
  "server",
  "reqwest",                                  # required for some strange reason
  "transport-child-process",
  "transport-io",
  "transport-streamable-http-client",
  "transport-streamable-http-client-reqwest",
] }
thiserror = "2.0.17"

[features]
audio = ["rig-core/audio"]
image = ["rig-core/image"]
