[package]
name = "rig-dynclient"
version = "0.32.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/patonw/rig-dynclient.git"
description = "A dynamic provider client wrapper for rig"

[dependencies]
delegate = "0.13.5"
disjoint_impls = { version = "1.3.7" }
kinded = "0.5.0"
rig-core = { version = "0.32.0", features = ["rmcp"] }
rmcp = { version = "0.16", features = [
  "client",
  "server",
  "reqwest",                                  # required for some strange reason
  "transport-child-process",
  "transport-io",
  "transport-streamable-http-client",
  "transport-streamable-http-client-reqwest",
], optional = true }
thiserror = "2.0.17"

[features]
default = []
rmcp = ["dep:rmcp", "rig-core/rmcp"]
audio = ["rig-core/audio"]
image = ["rig-core/image"]
